--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
 
         </activity>
         
-        <activity android:name=".BarcodeMainActivity"
-            android:parentActivityName=".MainActivity">
+        <activity android:name=".BarcodeMainActivity">
+            <!--android:parentActivityName=".MainActivity">-->
             <!--<meta-data-->
                 <!--android:name="android.support.PARENT_ACTIVITY"-->
                 <!--android:value=".MainActivity" />-->
